--- a/src/index.html
+++ b/src/index.html
@@ -4,5 +4,15 @@
     </head>
     <body>
         Hello Qiao.Css
+        <h1>Form</h1>
+        <form style="max-width: 500px;">
+            <p>Input Text:</p>
+            <input type="text" class="q-input q-input-s w-100 mb-1" placeholder="please input text to search"><i class="i i-search"></i>  
+            <input type="text" class="q-input q-input-m w-100" placeholder="please input text to search">
+        </form>
+        <h1>Icon</h1>
+        <div>
+            <i class="i i-search"></i>  
+        </div>
     </body>
 </html>
