input text small

--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,13 @@
     <body>
         Hello Qiao.Css
         <h1>Form</h1>
-        <form style="max-width: 500px;">
+        <form style="max-width: 500px; ">
             <p>Input Text:</p>
-            <input type="text" class="q-input q-input-s w-100 mb-1" placeholder="please input text to search"><i class="i i-search"></i>  
-            <input type="text" class="q-input q-input-m w-100" placeholder="please input text to search">
+            <div class="input-box">
+                <input type="text" class="q-input q-input-s w-100 mb-1 bd-1" placeholder="please input text to search">
+                <i class="i i-search pos-feedback-s"></i>  
+            </div>
+           <input type="text" class="q-input q-input-m w-100" placeholder="please input text to search">
         </form>
         <h1>Icon</h1>
         <div>
